@@ -8,6 +8,6 @@ EBUILD calculate-server-2.1.4-r1.ebuild 4975 RMD160 de6e61d71703146fdf6e678e4cde
 EBUILD calculate-server-2.1.4.ebuild 4814 RMD160 79602f808ee3c732b64bdaef60ed0cfcd1edd877 SHA1 00bf30a53f5b3e3186d0fba84f29e76e46f5e48f SHA256 964d9675d71669188dd715d65a10eeb02d57aeee9588dff9ae8b6cd3db13f71b
 EBUILD calculate-server-2.1.5-r2.ebuild 5238 RMD160 98b6f0fe86c12564ac3ae2d73004b45f1175b247 SHA1 ac476c40fa362c32b0f79c65e1cb621367f9db4b SHA256 1fbb7aaf9e484756dffbb82e5d9b8973f63e21059e2c7f9751357b1d34403186
 EBUILD calculate-server-2.1.5.ebuild 4907 RMD160 aad056c88659db379c43e399ae8dd8705c41d206 SHA1 d0a4331fbd632b4cad53a92956764f6fe1d65bba SHA256 f36e83cdcd402ecc87a8b1107126065a3f0eff5719d70ba198577d337bb6a6d3
-EBUILD calculate-server-9999.ebuild 936 RMD160 6e221554dc3733630e65b8d26adc3c7595c7321b SHA1 6db57ab7b8726816c3f670f26265b64f3d3bbf25 SHA256 80f5476958611cc7b2e500d5fa7e16f43ee2f7b0a01eda1b4093151e2a228976
-MISC ChangeLog 791 RMD160 40932c22674f155e94b71510e15add49d63ab953 SHA1 c801a7dbcc0a8be1bed466fd41407279499b6dfd SHA256 31bbbcef9f5452c39e19aa8423531d632c5da0c1943c75b6e6ae9de769a53a9f
+EBUILD calculate-server-9999.ebuild 1123 RMD160 2b1492d84bac60abd24d4f00e108ef1bc640e0fd SHA1 e618b2ba7a0f1f1063bb0893feb96c23855bd328 SHA256 567f37f92222ce453d577ef78f03a52ea380df28f5fdce38fca7ba818e237c3e
+MISC ChangeLog 939 RMD160 358aa064d6b7921654c8341b188c1ee585af9ac1 SHA1 9bf67428b72e5699e7285263886271c8c9d2aee2 SHA256 3b46fc22df220170fd67edd47fd610fcbe1aad149c66fe76e6ac6415e45dd58f
 MISC metadata.xml 286 RMD160 e243725ec1a1302cab0d0efee76a4a926e855916 SHA1 6071aa604ea5a1ba8e1772e8f37a24f26b893d8d SHA256 aab7ddde310df96da76277d5ae340a4b0926bec3b354bfb2fea3288081036d74
