@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  27 Nov 2009; Mike Hirecky (mhiretskiy) <mh@calculate.ru>
+  calculate-server-9999.ebuild:
+  Fix samba depends for live ebuild of calculate-server
+
 *calculate-server-2.1.5-r2 (27 Nov 2009)
 
   27 Nov 2009; Mike Hirecky (mhiretskiy) <mh@calculate.ru>
